src/components/Bio/style.scss
.bio {
  display: inline-block;
  box-sizing: border-box;
  width: 50%;
  height:100%;
}

